<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CardInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider_imageview">

        <Button
            android:id="@+id/woori_card_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/wooricard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/woori_card_info_textview"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/woori_card_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/woori_card_info"
            app:layout_constraintLeft_toRightOf="@id/woori_card_title_button"
            app:layout_constraintTop_toTopOf="@id/woori_card_title_button"
            app:layout_constraintBottom_toBottomOf="@id/woori_card_title_button"
            />

        <TextView
            android:id="@+id/used_woori_card_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#FFEB0000"
            app:layout_constraintTop_toBottomOf="@id/woori_card_info_textview"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/hyundai_card_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/hyundaicard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/hyundai_card_info_textview"
            app:layout_constraintTop_toBottomOf="@id/used_woori_card_textview"
            />

        <TextView
            android:id="@+id/hyundai_card_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/hyundai_card_info"
            app:layout_constraintLeft_toRightOf="@id/hyundai_card_title_button"
            app:layout_constraintTop_toBottomOf="@id/used_woori_card_textview"
            app:layout_constraintTop_toTopOf="@id/hyundai_card_title_button"
            app:layout_constraintBottom_toBottomOf="@id/hyundai_card_title_button"
            />

        <TextView
            android:id="@+id/used_hyundai_card_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#FFEB0000"
            app:layout_constraintTop_toBottomOf="@id/hyundai_card_info_textview"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/hana_card_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/hanacard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/hana_card_info_textview"
            app:layout_constraintTop_toBottomOf="@id/used_hyundai_card_textview"
            />

        <TextView
            android:id="@+id/hana_card_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/hana_card_info"
            app:layout_constraintLeft_toRightOf="@id/hana_card_title_button"
            app:layout_constraintTop_toBottomOf="@id/used_hyundai_card_textview"
            app:layout_constraintTop_toTopOf="@id/hana_card_title_button"
            app:layout_constraintBottom_toBottomOf="@id/hana_card_title_button"
            />

        <TextView
            android:id="@+id/used_hana_card_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#FFEB0000"
            app:layout_constraintTop_toBottomOf="@id/hana_card_info_textview"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/kb_card_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/kbcard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/kb_card_info_textview"
            app:layout_constraintTop_toBottomOf="@id/used_hana_card_textview"
            />

        <TextView
            android:id="@+id/kb_card_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/kb_card_info"
            app:layout_constraintLeft_toRightOf="@id/kb_card_title_button"
            app:layout_constraintTop_toBottomOf="@id/used_hana_card_textview"
            app:layout_constraintTop_toTopOf="@id/kb_card_title_button"
            app:layout_constraintBottom_toBottomOf="@id/kb_card_title_button"
            />

        <TextView
            android:id="@+id/used_kb_card_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#FFEB0000"
            app:layout_constraintTop_toBottomOf="@id/kb_card_info_textview"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/divider_imageview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#FFAAAAAA"
        app:layout_constraintTop_toBottomOf="@id/card_info_layout"
        app:layout_constraintBottom_toTopOf="@id/card_benefit_scrollview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:id="@+id/card_benefit_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_imageview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_background"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wooricard"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wooricard_benefit"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/dotted"
                android:layerType="software"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hanacard"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/hanacard_benefit"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/dotted"
                android:layerType="software"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hyundaicard"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:autoLink="web"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/hyundaicard_benefit"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>